--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -2,7 +2,7 @@
 <resources>
   <!--Source: Activity title.
         Description: Title for the Settings activity.-->
-  <string name="tts_settings_label">eSpeak 文字转语音 (TTS) 设置</string>
+  <string name="tts_settings_label">Ekho文字转语音 (TTS) 设置</string>
   <!--Source: Preference title.
         Description: Title for the preference that controls default voice pitch.-->
   <string name="setting_default_pitch">默认声调</string>
@@ -13,14 +13,14 @@
         Description: Status message shown when installing voice data.-->
   <string name="installing_voice_data">正在安装语音数据...</string>
   <!--Source: Dialog message.
-        Description: Alert dialog prompting the user to set eSpeak as their default TTS engine.-->
-  <string name="set_default_message">未将 eSpeak 设置为文字转语音的默认引擎。</string>
+        Description: Alert dialog prompting the user to set Ekho as their default TTS engine.-->
+  <string name="set_default_message">未将 Ekho 设置为文字转语音的默认引擎。</string>
   <!--Source: Dialog message.
         Description: Alert dialog telling the user that voice data installation failed.-->
-  <string name="voice_data_failed_message">eSpeak 无法安装语音数据。请检查您的 SD 卡。</string>
+  <string name="voice_data_failed_message">Ekho 无法安装语音数据。请检查您的 SD 卡。</string>
   <!--Source: Dialog message.
         Description: Alert dialog telling the user that an unknown error has occurred.-->
-  <string name="error_message">很抱歉，eSpeak 启动失败。</string>
+  <string name="error_message">很抱歉，Ekho 启动失败。</string>
   <!--Source: Label text.
         Description: Label informing the user of the current text-to-speech language.-->
   <string name="current_tts_locale">默认语音</string>
@@ -31,10 +31,10 @@
         Description: Button for launching general text-to-speech settings.-->
   <string name="tts_settings">文字转语音 (TTS) 常规设置</string>
   <!--Source: Button label.
-        Description: Button for launching eSpeak-specific settings.-->
-  <string name="engine_settings">eSpeak 文字转语音 (TTS) 设置</string>
+        Description: Button for launching Ekho-specific settings.-->
+  <string name="engine_settings">Ekho 文字转语音 (TTS) 设置</string>
   <!--Source: Label text.
-        Description: Label informing the user that eSpeak is loading resources.-->
+        Description: Label informing the user that Ekho is loading resources.-->
   <string name="loading">正在加载，请稍候...</string>
   <!--Source: Spoken aloud.
         Description: Sample text spoken aloud when the user is trying out a language.-->
