--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -2,7 +2,7 @@
 <resources>
   <!--Source: Activity title.
         Description: Title for the Settings activity.-->
-  <string name="tts_settings_label">eSpeak 文字轉語音設定</string>
+  <string name="tts_settings_label">Ekho 文字轉語音設定</string>
   <!--Source: Preference title.
         Description: Title for the preference that controls default voice pitch.-->
   <string name="setting_default_pitch">預設音調</string>
@@ -13,14 +13,14 @@
         Description: Status message shown when installing voice data.-->
   <string name="installing_voice_data">正在安裝語音資料...</string>
   <!--Source: Dialog message.
-        Description: Alert dialog prompting the user to set eSpeak as their default TTS engine.-->
-  <string name="set_default_message">eSpeak 尚未設為您的預設文字轉語音引擎。</string>
+        Description: Alert dialog prompting the user to set Ekho as their default TTS engine.-->
+  <string name="set_default_message">Ekho 尚未設為您的預設文字轉語音引擎。</string>
   <!--Source: Dialog message.
         Description: Alert dialog telling the user that voice data installation failed.-->
-  <string name="voice_data_failed_message">eSpeak 無法安裝語音資料。請檢查您的 SD 卡。</string>
+  <string name="voice_data_failed_message">Ekho 無法安裝語音資料。請檢查您的 SD 卡。</string>
   <!--Source: Dialog message.
         Description: Alert dialog telling the user that an unknown error has occurred.-->
-  <string name="error_message">很抱歉，無法啟動 eSpeak。</string>
+  <string name="error_message">很抱歉，無法啟動 Ekho。</string>
   <!--Source: Label text.
         Description: Label informing the user of the current text-to-speech language.-->
   <string name="current_tts_locale">預設語音</string>
@@ -31,10 +31,10 @@
         Description: Button for launching general text-to-speech settings.-->
   <string name="tts_settings">文字轉語音一般設定</string>
   <!--Source: Button label.
-        Description: Button for launching eSpeak-specific settings.-->
-  <string name="engine_settings">eSpeak 文字轉語音設定</string>
+        Description: Button for launching Ekho-specific settings.-->
+  <string name="engine_settings">Ekho 文字轉語音設定</string>
   <!--Source: Label text.
-        Description: Label informing the user that eSpeak is loading resources.-->
+        Description: Label informing the user that Ekho is loading resources.-->
   <string name="loading">載入中，請稍候...</string>
   <!--Source: Spoken aloud.
         Description: Sample text spoken aloud when the user is trying out a language.-->
