--- a/README
+++ b/README
@@ -1,27 +1,50 @@
 ##### How to build #####
 1. open project with Android Studio.
+2. ndk-build V=1
 
 ##### Build eSpeak NG Android project #####
 1. get code and build from https://github.com/espeak-ng/espeak-ng/tree/master/android
 2. fix checksum plugin issue: https://plugins.gradle.org/plugin/org.gradle.crypto.checksum
 3. copy espeak-ng-data from a relase version
 
-##### SETUP Android ENV #####
-1. http://source.android.com/source/initializing.html
-2. get sun-java6-jdk from http://www.ubuntuupdates.org/package/sun_java_community_team/maverick/main/base/sun-java6-jdk
-
-##### write android engine 3 #####
-1. copy from espeak-tts and replace with echo
-2. ndk-build V=1
-3. fix compile errors
-3.1 touch jni/ttsekho/../../../src/stdafx.h
-
 ##### support English #####
-Flite: https://play.google.com/store/apps/details?id=edu.cmu.cs.speech.tts.flite
-Source Code: https://github.com/happyalu/Flite-TTS-Engine-for-Android
-make links as need for ndk (darin-x86 -> linux-x86) which is wrong in flite
-./configure --with-langvox=android --target=armeabi-android && make
-./configure --with-langvox=android --target=armeabiv7a-android && make
-./configure --with-langvox=android --target=x86-android && make
-./configure --with-langvox=android --target=mips-android && make
-export FLITEDIR=/Users/zhiwei-techcomputer-1/apps/flite-1.5.6-current
+see jni/flite_diff
+
+Flite latest source: https://github.com/festvox/flite
+Flite home page: http://www.festvox.org/flite/
+build systems: https://developer.android.com/ndk/guides/other_build_systems
+
+git clone https://github.com/festvox/flite
+cd flite
+
+./configure --with-langvox=android --target=arm64-androidmake
+link arm64-v8a-android -> aarch64-android in flite/build
+change config/config
+make
+
+./configure --with-langvox=android --target=arm-android
+link armeabi-v7a-android -> arm-android in flite/build
+change config/config
+make
+
+./configure --with-langvox=android --target=x86-android
+change config/config
+make
+
+./configure --with-langvox=android --target=x86_64-android
+change config/config
+make
+
+change compiler in flite/config/config for x86-android:
+CC       = /Users/hgneng/Library/Android/sdk/ndk/21.4.7075529/toolchains/llvm/prebuilt/darwin-x86_64/bin/clang++
+CFLAGS   = -g -O2 -Wall -fpic -O3 -DANDROID --sysroot=/Users/hgneng/Library/Android/sdk/ndk/21.4.7075529/sysroot -I/Users/hgneng/Library/Android/sdk/ndk/21.4.7075529/sysroot/usr/include/i686-linux-android
+AR       = /Users/hgneng/Library/Android/sdk/ndk/21.4.7075529/toolchains/llvm/prebuilt/darwin-x86_64/bin/i686-linux-android-ar
+RANLIB   = /Users/hgneng/Library/Android/sdk/ndk/21.4.7075529/toolchains/llvm/prebuilt/darwin-x86_64/bin/i686-linux-android-ranlib
+
+##### Troubleshooting #####
+
+We may need to fix atof with strtod.
+
+We may need to upgrade Android API to 21 (minSdkVersion in build.gradle and APP_PLATFORM := android-21 in Application.mk) to fix undefined reference 'rand' issue. (refer to https://stackoverflow.com/questions/66455212/android-ndk-returns-an-error-undefined-reference-to-rand-srand)
+
+We may need to use nm to check flite.a to debug undefined reference issue. Sometimes, we use C++ compiler to build flite will cause undefined reference issue.
